# id

./: .gitignore  Cargo.toml  README.md
.cargo/: config
contracts/directory/: Cargo.toml  README.md
contracts/directory/examples/: schema.rs  schema_directory.rs
contracts/directory/src/: contract.rs  error.rs  execute.rs  lib.rs  query.rs  state.rs
contracts/directory/tests/: directory.rs  init.rs  ownership.rs  tests.rs
contracts/directory/tests/common/: mod.rs
contracts/id/: Cargo.toml
contracts/id/examples/: schema.rs  schema_id.rs
contracts/id/src/: contract.rs  error.rs  execute.rs  lib.rs  query.rs  state.rs
contracts/id/tests/: init.rs  ownership.rs  tests.rs
contracts/id/tests/common/: mod.rs
contracts/nameserver/: Cargo.toml  NOTICE  README.md
contracts/nameserver/examples/: schema.rs  schema_nameserver.rs
contracts/nameserver/src/: error.rs  execute.rs  lib.rs  query.rs  state.rs
data/: pisco.json  pisco_add.json  pisco_add_bad.json  pisco_add_xyz.json  pisco_directory.json  pisco_nameserver_mint.json  pisco_nameserver_xyz.json
notes/: directory.txt  nameserver.txt
