[workspace]
members = [
  "packages/*",
  "contracts/*"
]
[workspace.package]
version = "0.1.1"
authors = ["PFC <PFC-Validator@protonmail.com>"]
edition = "2021"
license = "UNLICENSED"
homepage = "https://pfc-validator.github.io/"
repository = "https://github.com/SocialIdentity/id"
documentation = "https://github.com/SocialIdentity/id#README"
keywords = ["blockchain", "cosmos", "cosmwasm"]

[workspace.dependencies]
cosmwasm-schema = "1.1"
cosmwasm-std = "1.1"
cw2 = "0.16"
cw20 = "0.16.0"
cw721 = "0.16.0"
cw-controllers = "0.16"
cw-storage-plus = "0.16"
cw-utils = "0.16"
hex = "0.4.3"
thiserror = "1.0"
semver = "1"
pfc-fee-split = "0.1.1"
#rust-crypto = {version =  "0.2.36", default-features =false}
sha3 = {version = "0.10.6", default-features = false}

[profile.release.package.id-types]
codegen-units = 1
incremental = false


[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false

