[package]
name = "id-nameserver"
description = "Nameserver .. based on cw2981"
authors = ["PFC <PFC-Developer@protonmail.com", "Alex Lynham <alex@lynh.am>"]
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-schema = { workspace = true }
cosmwasm-std = { workspace = true }
cw2 = { workspace = true }
cw20 = { workspace = true }
cw-controllers = { workspace = true }
cw-storage-plus = { workspace = true }
cw-utils = {workspace=true}
cw721 = { workspace = true }
cw721-base = { workspace = true, features = ["library"] }
schemars = { workspace = true }
semver = { workspace = true }
#serde           = { workspace = true }
thiserror = { workspace = true }

id-types = { path = "../../packages/types" }
id-shared = { path = "../../packages/shared" }


[package.metadata.scripts]
optimize = """docker run --rm -v "$(pwd)":/code \
          --mount type=volume,source="$(basename "$(pwd)")_cache",target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
              cosmwasm/rust-optimizer:0.12.9"""
optimize-w32 = """docker run --rm -v c:\\pfc\\SocialIdentity\\id:/code  \
            --mount type=volume,source=socialid_id_cache,target=/code/target \
            --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
            cosmwasm/rust-optimizer:0.12.9"""
